--- a/kube-doom3.yaml
+++ b/kube-doom3.yaml
@@ -45,7 +45,7 @@ subjects:
   namespace: default
 ---
 # -------------------------------------------------------------------
-# 4. Multi-Container Deployment Definition (REPLACED POD WITH DEPLOYMENT)
+# 4. Multi-Container Deployment Definition (MODIFIED TO USE CUSTOM .WAD FILE)
 # -------------------------------------------------------------------
 apiVersion: apps/v1  # Deployment uses apps/v1
 kind: Deployment     # Changed from Pod to Deployment
@@ -68,6 +68,22 @@ spec:
     spec:
       serviceAccountName: kubedoom
 
+      # --- INIT CONTAINER: Downloads the custom .wad file ---
+      initContainers:
+      - name: download-wad-file
+        image: busybox:1.36 # A minimal image that includes 'wget'
+        command: ["wget"]
+        # Use the raw GitHub URL to download the custom .wad content.
+        # It is saved to the shared 'wad-volume' under the required name 'doom2.wad'.
+        args:
+          - "-O"
+          - "/wad-data/doom2.wad"
+          - "https://raw.githubusercontent.com/ndouglas-cloudsmith/minecraft/main/doom2.wad"
+        volumeMounts:
+          - name: wad-volume
+            mountPath: /wad-data # Mounts the emptyDir volume
+
+      # --- Main Containers ---
       containers:
       # --- Kubedoom Container (VNC Server) ---
       - name: kubedoom
@@ -81,6 +97,13 @@ spec:
           # RELAXED SECURITY CONTEXT
           runAsNonRoot: false
           runAsUser: 0
+        # --- VOLUME MOUNT: Mounts the downloaded file, replacing the default ---
+        volumeMounts:
+          - name: wad-volume
+            # This mounts the specific file from the volume...
+            subPath: doom2.wad
+            # ...directly over the default file path, replacing the original.
+            mountPath: /doom2.wad 
 
       # --- noVNC Container (Web Proxy) ---
       - name: novnc-proxy
@@ -96,3 +119,8 @@ spec:
           value: "5900"
         - name: PORT
           value: "8080"
+
+      # --- VOLUME DEFINITION: The temporary volume shared between the Init and Main containers ---
+      volumes:
+        - name: wad-volume
+          emptyDir: {} # Temporary volume tied to the Pod's lifecycle
